Removed the CSS which makes the cards grow when hovering over them as it caused an issue when accordions weren't collapsed

--- a/src/index.css
+++ b/src/index.css
@@ -51,10 +51,3 @@ code {
     transform: rotate(360deg);
   }
 }
-
-.card-expand {
-  transition: all 0.2s ease-in-out;
-}
-.card-expand:hover {
-  transform: scale(1.03);
-}
